<resources>
    <string name="app_name">Smart Door Lock</string>
    <string name="default_notification_channel_id">notification_channel</string>
    <string name="default_notification_channel_name">Khóa cửa</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="close_the_door">Đóng cửa</string>
    <string name="open_the_door">Mở cửa</string>
    <string name="take_a_photo">Chụp ảnh mới</string>
    <string name="user_name_hint">Tên đăng nhập</string>
    <string name="password_hint">Mật khẩu</string>
    <string name="login">Đăng nhập</string>
    <string name="welcome_title">Smart Door Lock</string>
    <string name="signup">Đăng ký</string>
    <string name="create_account">Tạo tài khoản</string>
    <string name="signup_now">Đăng ký ngay</string>
    <string name="login_now">Đăng nhập ngay</string>
    <string name="name">Tên</string>
    <string name="email">Email</string>
    <string name="forgot_password">Quên mật khẩu?</string>
    <string name="send">Gửi</string>
    <string name="send_again">Gửi lại </string>
    <string name="new_password">Mật khẩu mới</string>
    <string name="confirm_password">Xác nhận mật khẩu mới</string>
    <string name="code">Mã xác thực</string>
    <string name="log_out">Đăng xuất</string>
    <string name="cancel">Hủy</string>
    <string name="user_name_label">Tên</string>
    <string name="save">Lưu</string>
    <string name="current_password">Mật khẩu hiện tại</string>
    <string name="history">Lịch sử</string>
    <string name="delete">Xóa</string>
    <string name="change_password">Đổi mật khẩu</string>
    <string name="member">Thành viên</string>
    <string name="main">Chính</string>
    <string name="personal">Cá nhân</string>
    <string name="setting">Cài đặt</string>
    <string name="list_member">Danh sách thành viên</string>
    <string name="information">Thông tin</string>
    <string name="update">Cập nhập</string>
    <string name="full_name_label">Họ tên</string>
    <string name="date_of_birth">Ngày sinh</string>
    <string name="phone_number">Số điện thoại</string>
    <string name="dd_mm_yyyy">dd/mm/yyyy</string>
    <string name="created_date">Thời gian đăng ký</string>
    <string name="created_by">Người thêm</string>
    <string name="empty_content">Trống</string>
    <string name="notification">Thông báo</string>
    <string name="check_door">Kiểm tra cửa</string>
    <string name="current_device">Thiết bị hiện có</string>
    <string name="account">Tài khoản</string>
    <string name="my_device">Thiết bị của tôi</string>
    <string name="empty_list">Danh sách trống</string>
    <string name="search">Tìm kiếm</string>
    <string name="list">Danh sách</string>
    <string name="grid">Lưới</string>
    <string name="ok">Ok</string>
    <string name="add_member">Thêm thành viên</string>
</resources>