<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background_login"
        android:padding="30dp"
        android:fitsSystemWindows="true"
        tools:context=".ui.welcome.WelcomeFragment">

        <TextView
            android:id="@+id/welcomeTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:shadowColor="#333"
            android:shadowDx="2"
            android:shadowDy="2"
            android:shadowRadius="3"
            android:text="@string/welcome_title"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="40sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.2"
            tools:layout_editor_absoluteX="0dp" />

        <Button
            android:id="@+id/register"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:backgroundTint="@color/white"
            android:text="@string/signup"
            android:textColor="@color/my_light_primary"
            android:textSize="18sp"
            app:cornerRadius="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/welcomeTitle"
            app:layout_constraintVertical_bias="0.85" />

        <Button
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="10dp"
            android:backgroundTint="#39b0e0"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:cornerRadius="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/register" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>