<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        tools:context=".ui.welcome.LoginFragment">

        <include
            android:id="@+id/toolbar"
            layout="@layout/toolbar" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            app:cardCornerRadius="30dp"
            app:cardElevation="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_editor_absoluteX="30dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/custom_edittext"
                android:orientation="vertical"
                android:padding="15dp">

                <TextView
                    android:id="@+id/titleLogin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="40dp"
                    android:text="@string/login"
                    android:textAlignment="center"
                    android:textColor="@color/my_secondary"
                    android:textSize="36sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/emailLabel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawablePadding="8dp"
                    android:text="@string/email"
                    android:textColor="@color/my_secondary"
                    android:textSize="22sp"
                    app:drawableLeftCompat="@drawable/ic_email"
                    app:drawableTint="@color/my_secondary"/>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/emailL"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:helperText=" "
                    app:helperTextTextColor="@color/error"
                    app:endIconMode="clear_text">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/email"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginTop="12dp"
                        android:inputType="textEmailAddress"
                        android:maxLines="1"
                        android:padding="8dp"
                        android:scrollHorizontally="true" />
                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:id="@+id/passwordLabel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawablePadding="8dp"
                    android:text="@string/password_hint"
                    android:textColor="@color/my_secondary"
                    android:textSize="22sp"
                    app:drawableLeftCompat="@drawable/baseline_lock_24"
                    app:drawableTint="@color/my_secondary"/>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/passwordL"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:helperText=" "
                    app:helperTextTextColor="@color/error"
                    app:endIconMode="password_toggle">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/password"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:inputType="textPassword"
                        android:padding="8dp" />
                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/buttonLogin"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginTop="40dp"
                    android:backgroundTint="@color/my_light_primary"
                    android:text="@string/login"
                    android:textSize="18sp"
                    app:cornerRadius="20dp" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>


        <TextView
            android:id="@+id/registerNow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="28dp"
            android:text="@string/signup_now"
            android:textColor="@color/link_color"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardView"
            app:layout_constraintVertical_bias="0.7" />

        <TextView
            android:id="@+id/forgotPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgot_password"
            android:textColor="@color/link_color"
            android:layout_marginEnd="20dp"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardView"
            app:layout_constraintVertical_bias="0.7"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>