<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/bg_color"
        tools:context=".ui.main.profile.ChangeUsernameFragment">

        <include
            android:id="@+id/toolbar"
            layout="@layout/toolbar" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.15">

            <TextView
                android:id="@+id/currentPasswordLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="8dp"
                android:text="@string/current_password"
                android:textColor="@color/my_secondary"
                android:textSize="18sp"
                app:drawableLeftCompat="@drawable/baseline_lock_24"
                app:drawableTint="@color/my_secondary" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/currentPasswordL"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:endIconMode="password_toggle"
                app:helperText=" "
                app:helperTextTextColor="@color/error">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/currentPassword"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:inputType="textPassword"
                    android:padding="8dp" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/newPasswordLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="8dp"
                android:text="@string/new_password"
                android:textColor="@color/my_secondary"
                android:textSize="18sp"
                app:drawableLeftCompat="@drawable/baseline_lock_24"
                app:drawableTint="@color/my_secondary" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/newPasswordL"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:endIconMode="password_toggle"
                app:helperText=" "
                app:helperTextTextColor="@color/error">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/newPassword"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:inputType="textPassword"
                    android:padding="8dp" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/confirmPasswordLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="8dp"
                android:text="@string/confirm_password"
                android:textColor="@color/my_secondary"
                android:textSize="18sp"
                app:drawableLeftCompat="@drawable/baseline_lock_24"
                app:drawableTint="@color/my_secondary" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/confirmPasswordL"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:endIconMode="password_toggle"
                app:helperText=" "
                app:helperTextTextColor="@color/error">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/confirmPassword"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:inputType="textPassword"
                    android:padding="8dp" />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <Button
            android:id="@+id/saveButton"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:backgroundTint="@color/my_light_primary_disable"
            android:clickable="false"
            android:text="@string/save"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.95" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>